@@ -313,7 +313,6 @@ Configuration:
         Use Xft font database:    ${xft_ok}
         Use gnome-print:          ${gp}
         Use MMX optimizations:    ${use_mmx_asm}
-	Use modules:              ${mod}
 	KDE support:		  ${kde}
 "
 
