@@ -1,3 +1,8 @@
+2003-06-18  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/dialogs/object-properties.c (sp_object_properties_dialog_destroy): Disconnect
+	signals here, fixes crash
+
 2003-06-18  Masatake YAMATO  <jet@gyve.org>
 
 	* src/toolbox.c (sp_toolbox_*_create): passed tt to 
